--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<h1>Maximize Customer Data Platform</h1>
+<html>
+  <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116987331-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-116987331-1');
+  </script>
+  </head>
+  <body>
+    <h1>Maximize Customer Data Platform</h1>    
+  </body>
+</html>
