--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   </script>
   </head>
   <body>
-    <h1>Maximize Customer Data Platform</h1>    
+    <h1>Website Under Contruction</h1>    
   </body>
 </html>
